trunk/Archive2/d2/6d29b8eb8fddf1/output
main.cpp: In function 'int main()':
main.cpp:9:24: error: 'bar' in namespace 'foo' does not name a type
     using hello = foo::bar;
                        ^
